--- a/01-accordeon-booleen.html
+++ b/01-accordeon-booleen.html
@@ -9,6 +9,20 @@
   <body>
     <h1>Accordéon avec des booléens</h1>
 
+    <div class="accordeon">
+      <section>
+        <button>bouton 1</button>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quod, quos saepe dolorem accusamus in reprehenderit eius veniam nulla optio asperiores nemo molestias voluptas aut recusandae possimus minima accusantium! Ex?</p>
+      </section>
+      <section>
+        <button>bouton 2</button>
+        <p>Facere recusandae nulla neque perferendis eum excepturi itaque eligendi natus iusto, eos, quae, quasi illum magnam quidem ab non beatae blanditiis voluptatum distinctio doloribus. Tempore quas exercitationem blanditiis! Iusto, atque.</p>
+      </section>
+      <section>
+        <button>bouton 3</button>
+        <p>Ipsa, est labore. Sunt rerum ab perferendis aspernatur perspiciatis sapiente, voluptate quidem! Tempore nemo eaque quod quibusdam obcaecati? Illum culpa possimus dignissimos nesciunt provident autem voluptate voluptas alias iure harum.</p>
+      </section>
+    </div>
     
   </body>
 </html>
