--- a/02-accordeon-nombre.html
+++ b/02-accordeon-nombre.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accordéon mémorisant par un nombre l'élèment ouvert</title>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Accordéon mémorisant par un nombre l'élèment ouvert</title>
+      <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   </head>
+
   <body>
     <h1>Accordéon mémorisant par un nombre l'élèment ouvert</h1>
+
+    <div x-data="{ open: false }">
+      <button @click="open = ! open">Toggle</button>
+   
+      <span x-show="open" x-transition>
+          Hello 👋
+      </span>
+  </div>
   </body>
 </html>
