--- a/02-accordeon-nombre.html
+++ b/02-accordeon-nombre.html
@@ -12,8 +12,7 @@
     <h1>Accordéon mémorisant par un nombre l'élèment ouvert</h1>
 
     <div x-data="{ open: false }">
-      <button @click="open = ! open">Toggle</button>
-   
+      <button @click="open = ! open">bouton</button>
       <span x-show="open" x-transition>
           Hello 👋
       </span>
