--- a/03-accordeon-collapse.html
+++ b/03-accordeon-collapse.html
@@ -15,7 +15,7 @@
       <button @click="expanded = ! expanded">bouton 1</button>
    
       <p x-show="expanded" x-collapse>
-          ...
+          hello
       </p>
   </div>
     <script></script>
