--- a/02-accordeon-nombre.html
+++ b/02-accordeon-nombre.html
@@ -15,21 +15,21 @@
     <div x-data="{ open: 1 }">
 
       <section>
-        <button @click="open = 1">bouton</button>
+        <button @click="open = 1">bouton 1</button>
         <span x-show="open == 1" x-transition>
             Hello 👋
         </span>
       </section>
 
       <section>
-        <button @click="open = 2">bouton</button>
+        <button @click="open = 2">bouton 2</button>
         <span x-show="open == 2" x-transition>
             Hello 👋
         </span>
       </section>
 
       <section> 
-        <button @click="open = 3">bouton</button>
+        <button @click="open = 3">bouton 3</button>
         <span x-show="open == 3" x-transition>
             Hello 👋
         </span>
