--- a/04-accordeon-horizontal.html
+++ b/04-accordeon-horizontal.html
@@ -8,5 +8,15 @@
   </head>
   <body>
     <h1>Accordéon horizontal</h1>
+    <ul id="accordeon">
+      <li class="actif">== $0
+      </li>
+      <li>
+        ::marker
+        <figure>flex==$0</figure>
+      </li>
+    </ul>
+
+    <li>x-bind:class="{ 'actif': foo }"</li>
   </body>
 </html>
