--- a/fr/01-accordeon-booleen.html
+++ b/fr/01-accordeon-booleen.html
@@ -11,6 +11,9 @@
   <body>
     <h1>Accordéon avec des booléens</h1>
 
+    <h1>autre page en francais
+    </h1>
+    <a href="../en/index2.html">Lien autre page</a>
 
   <div class="accordeon">
     <section>
