--- a/fr/index2.html
+++ b/fr/index2.html
@@ -10,8 +10,11 @@
     
     <ul>
         <h1>langue</h1>
-        <li><a href="../fr/autre_page.html">page en Francais</a></li>
-        <li><a href="../en/other_page.html">English page</a></li>
+        <li><a href="../fr/01-accordeon-booleen.html">page en Francais</a></li>
+        <li><a href="../en/en-accordeon-booleen.html">English page</a></li>
     </ul>
+
+    <a href="../fr/index.html" onclick="document.cookie = 'nf_lang=fr; path=/'">
+
 </body>
 </html>
