--- a/redirect/redirect.html
+++ b/redirect/redirect.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>choisir votre langue</title>
+    <title>Document</title>
 </head>
 <body>
-    <ul>
-    <h1>langue</h1>
-        <li><a href="../fr/01-accordeon-booleen.html">page en Francais</a></li>
-        <li><a href="../en/en-accordeon-booleen.html">English page</a></li>
-    </ul>
+
+    <h1>erreur 302!</h1>
+
+   {
+    [[redirects]]
+    from = "../en/index2.html"
+   }
+
+
+    <div redirects="/ /fr/ 302! Language=fr"></div>
+    <div redirects="/ /en/ 302! Language=en"></div>
+  
 
     <a href="../fr/index.html" onclick="document.cookie = 'nf_lang=fr; path=/'">
+
 
 </body>
 </html>
