--- a/en/en-accordeon-booleen.html
+++ b/en/en-accordeon-booleen.html
@@ -4,28 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accordéon avec des booléens</title>
+    <title>Accordion with boolean</title>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
   </head>
 
   <body>
-    <h1>Accordéon avec des booléens</h1>
+    <h1>Accordion with boolean</h1>
 
-        <div>
-            <h1>autre page en francais
+          <div>
+            <h1>other page in english
             </h1>
-            <a href="../en/index2.html">Lien autre page</a>
-          </div>
+            <a href="../fr/index2.html">Link to the page</a>
+        </div>
 
-<a href="../fr/index.html" onclick="document.cookie = 'nf_lang=fr; path=/'">
+        <a href="../fr/index.html" onclick="document.cookie = 'nf_lang=fr; path=/'">
 
-
-<!-- bouton avec des booléens-->
 
   <div class="accordeon">
     <section>
       <div x-data="{ open: false }">
-        <button @click="open = ! open">bouton 1</button>
+        <button @click="open = ! open">Button 1</button>
         <span x-show="open" x-transition>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quod, quos saepe dolorem accusamus in reprehenderit eius veniam nulla optio asperiores nemo molestias voluptas aut recusandae possimus minima accusantium! Ex?</p>
         </span>
@@ -35,7 +33,7 @@
   <div class="accordeon">
     <section>
       <div x-data="{ open: false }">
-        <button @click="open = ! open">bouton 2</button>
+        <button @click="open = ! open">Button 2</button>
         <span x-show="open" x-transition>
           <p>Facere recusandae nulla neque perferendis eum excepturi itaque eligendi natus iusto, eos, quae, quasi illum magnam quidem ab non beatae blanditiis voluptatum distinctio doloribus. Tempore quas exercitationem blanditiis! Iusto, atque.</p>
         </span>
@@ -45,7 +43,7 @@
   <div class="accordeon">
     <section>
       <div x-data="{ open: false }">
-        <button @click="open = ! open">bouton 3</button>
+        <button @click="open = ! open">Button 3</button>
         <span x-show="open" x-transition>
           <p>Ipsa, est labore. Sunt rerum ab perferendis aspernatur perspiciatis sapiente, voluptate quidem! Tempore nemo eaque quod quibusdam obcaecati? Illum culpa possimus dignissimos nesciunt provident autem voluptate voluptas alias iure harum.</p>
         </span>
