--- a/03-accordeon-collapse.html
+++ b/03-accordeon-collapse.html
@@ -11,6 +11,9 @@
   <body>
     <h1>Accordéon avec <code>x-collapse</code></h1>
 
+    <script defer src="https://unpkg.com/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
+
+    
     <div x-data="{ expanded: false }">
       <button @click="expanded = ! expanded">bouton 1</button>
    
