--- a/04-accordeon-horizontal.html
+++ b/04-accordeon-horizontal.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Accordéon horizontal</h1>
     <ul id="accordeon">
-      <li class="actif">== $0
+      <li class="actif">
       </li>
       <li>
         ::marker
