--- a/en/en-accordeon-booleen.html
+++ b/en/en-accordeon-booleen.html
@@ -25,7 +25,7 @@
       <div x-data="{ open: false }">
         <button @click="open = ! open">Button 1</button>
         <span x-show="open" x-transition>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quod, quos saepe dolorem accusamus in reprehenderit eius veniam nulla optio asperiores nemo molestias voluptas aut recusandae possimus minima accusantium! Ex?</p>
+          <p>Samian ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quod, quos saepe doSamian accusamus in reprehenderit eius veniam nulla optio asperiores nemo molestias voluptas aut recusandae possimus minima accusantium! Ex?</p>
         </span>
     </section>
   </div>
