--- a/fr/01-accordeon-booleen.html
+++ b/fr/01-accordeon-booleen.html
@@ -23,11 +23,11 @@
 <!-- bouton avec des booléens-->
 
   <div class="accordeon">
-    <section>
+    < section>
       <div x-data="{ open: false }">
         <button @click="open = ! open">bouton 1</button>
         <span x-show="open" x-transition>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quod, quos saepe dolorem accusamus in reprehenderit eius veniam nulla optio asperiores nemo molestias voluptas aut recusandae possimus minima accusantium! Ex?</p>
+          <p>Samian ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quod, quos saepe doSamian accusamus in reprehenderit eius veniam nulla optio asperiores nemo molestias voluptas aut recusandae possimus minima accusantium! Ex?</p>
         </span>
     </section>
   </div>
