--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         >
       </li>
       <li><a href="04-accordeon-horizontal.html">Accordéon horizontal</a></li>
-      <li><a href="05-onglets.html">Onglets</a></li>
+      <li><a href="05-onglets.html">onglets</a></li>
     </ul>
   </body>
 </html>
